2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-03-12  Chris Lahey  <clahey@rigger.boston.ximian.com>

	* applier.c (refresh_render): Move the image reload into a separate function.
	(size_changed_cb): Handle screen resolution changes.

2004-03-11  Chris Lahey  <clahey@rigger.boston.ximian.com>

	* applier.c (bg_applier_apply_prefs): If the image is going to be
	scaled or stretched, load it at the size it's going to be
	displayed.
	(need_wallpaper_load_p): If the wallpaper type changed, unless it
	changed between TILED and CENTERED, we need to reload the image.

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2003-12-07  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* Makefile.am: remove ununsed preview-file-selection.[ch] from
	build.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

Mon Jun  2 13:35:49 2003  Jonathan Blandford  <jrb@redhat.com>

	* preview-file-selection.c
	(preview_file_selection_intelligent_scale): scaling fix.  Patch
	from Marcus Matèrn <marcus.matern@safecareab.com>, #113816

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-04-07  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* applier.c (set_root_pixmap): Fixes bogus GC creation.
	patch from Anders Carlsson <andersca@gnu.org>
 
2003-02-16  Kjartan Maraas  <kmaraas@gnome.org>

	* applier.c: Fix a typo in a comment.
	