@@ -1,3 +1,10 @@
+2004-06-27  Rodney Dawes  <dobey@novell.com>
+
+	* applier.c: Remove all references to #ifdef HAVE_GTK_MULTIHEAD
+	Patch from Kjartan Maraas <kmaraas@gnome.org>
+
+	Fixes #142749
+
 2004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
